<?xml version="1.0"?>
<package format="3">
  <name>traj_estimation_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for trajectory estimation.</description>

  <maintainer email="jnguyenblue2804@gmail.com">Justin Nguyen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>